--- a/.github/workflows/syncGit.yml
+++ b/.github/workflows/syncGit.yml
@@ -1,7 +1,7 @@
 name: 1获取最新脚本
 on:
   schedule:
-    - cron: '50 */3 * * *'
+    - cron: '5 */3 * * *'
   workflow_dispatch:
   watch:
     types: started
@@ -34,6 +34,6 @@ jobs:
         with:
           src: ${{ secrets.SRC_USER }}
           dst: ${{ secrets.DST_USER }}
-          static_list: "JD"
+          static_list: "JD_tencent_scf"
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
